# okvis_ros

./: .gitmodules  CMakeLists.txt  CameraBase_8cpp.html  CameraBase_8hpp.html  CameraBase_8hpp_source.html  CeresIterationCallback_8hpp.html  CeresIterationCallback_8hpp_source.html  DenseMatcher_8cpp.html  DenseMatcher_8hpp.html  DenseMatcher_8hpp_source.html  DistortionBase_8hpp.html  DistortionBase_8hpp_source.html  Duration_8cpp.html  Duration_8hpp.html  Duration_8hpp_source.html  EquidistantDistortion_8hpp.html  EquidistantDistortion_8hpp_source.html  ErrorInterface_8hpp.html  ErrorInterface_8hpp_source.html  Estimator_8cpp.html  Estimator_8hpp.html  Estimator_8hpp_source.html  FrameAbsolutePoseSacProblem_8hpp.html  FrameAbsolutePoseSacProblem_8hpp_source.html  FrameNoncentralAbsoluteAdapter_8cpp.html  FrameNoncentralAbsoluteAdapter_8hpp.html  FrameNoncentralAbsoluteAdapter_8hpp_source.html  FrameRelativeAdapter_8cpp.html  FrameRelativeAdapter_8hpp.html  FrameRelativeAdapter_8hpp_source.html  FrameRelativePoseSacProblem_8hpp.html  FrameRelativePoseSacProblem_8hpp_source.html  FrameRotationOnlySacProblem_8hpp.html  FrameRotationOnlySacProblem_8hpp_source.html  FrameSynchronizer_8cpp.html  FrameSynchronizer_8hpp.html  FrameSynchronizer_8hpp_source.html  FrameSynchronizer__test_8cpp.html  FrameTypedefs_8hpp.html  FrameTypedefs_8hpp_source.html  (+657 more)
config/: dataset_converter_wingtra.yaml  rviz.rviz
launch/: okvis_node.launch  okvis_node_synchronous.launch  okvis_node_wingtra.launch  okvis_node_wingtra_synchronous.launch
msg/: described_frame.msg  keypoint.msg
(+62 files in other folders)
