<?xml version="1.0"?>
<package format="2">
  <name>okvis_ros</name>
  <version>1.1.3</version>
  <description>The okvis_ros package</description>

  <maintainer email="s.leutenegger@imperial.ac.uk">Stefan Leutenegger</maintainer>
  <author>Stefan Leutenegger</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>gps_common</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>maplab_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>rosbag</depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
